2011-05-31  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector [Chromium]: Put worker scripts into devtools_frontend.zip.
        https://bugs.webkit.org/show_bug.cgi?id=61803

        * WebKit.gyp:
        * scripts/generate_devtools_zip.py:

2011-05-31  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Kent Tamura.

        [Chromium] webkitStorageInfo methods (for quota API) should not crash when error callback is not given.
        https://bugs.webkit.org/show_bug.cgi?id=61823

        Fixed assertion on errorCallback parameter.

        Test: storage/quotainfo-no-callbacks.html

        * src/StorageInfoChromium.cpp:
        (WebCore::StorageInfo::queryUsageAndQuota):
        (WebCore::StorageInfo::requestQuota):

2011-05-31  Daniel Erat  <derat@chromium.org>

        Reviewed by Tony Chang.

        Make WebScreenInfoFactory return fresh screen dimensions.
        https://bugs.webkit.org/show_bug.cgi?id=61679

        * public/x11/WebScreenInfoFactory.h:
        * src/x11/WebScreenInfoFactory.cpp:
        (WebKit::WebScreenInfoFactory::screenInfo):

2011-05-31  Cary Clark  <caryclark@google.com>

        Reviewed by Eric Seidel.

        Allow Chromium porting layer to use Skia on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=61548

        * public/WebCommon.h:
        Don't allow WebKit to use CG if it is already using Skia.

        * src/PlatformBridge.cpp:
        (WebCore::PlatformBridge::paintScrollbarThumb):
        Allow scrollbar thumb draw to take WebCanvas.

2011-05-27  Jochen Eisinger  <jochen@chromium.org>

        Reviewed by Adam Barth.

        Check access policy on all storage operations
        https://bugs.webkit.org/show_bug.cgi?id=61581

        * src/StorageAreaProxy.cpp:
        (WebCore::StorageAreaProxy::length):
        (WebCore::StorageAreaProxy::key):
        (WebCore::StorageAreaProxy::getItem):
        (WebCore::StorageAreaProxy::setItem):